Making a bit more room to avoid cutoff on my vertical monitor.

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -5,13 +5,13 @@
 
 .left {
     float: left;
-    width: 20%;
+    width: 30%;
     height: 600px;
     border: 1px solid red;
 }
 
 .right {
     float: right;
-    width: 80%;
+    width: 70%;
     border: 1px solid blue;
 }
